# modern-software-dev-assignments

./: .gitignore  README.md  prompt.md  pyproject.toml
.claude/commands/: run-tests.md
.github/workflows/: semgrep.yml
week1/: assignment.md  chain_of_thought.py  k_shot_prompting.py  pyproject.toml  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md  assignment.md  coding_agent_from_scratch_lecture.py  prompt.md  pyproject.toml  writeup.md
week2/app/: db.py  main.py
week2/frontend/: index.html
week3/: .env.example  CLAUDE.md  README.md  app.ts  assignment.md  assignment_CN.md  design_doc_template.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vercel.json  vitest.config.ts
week3/api/: mcp.ts
week3/src/: cli.ts  http-server.ts  index.ts  verify-client.ts
week3/src/lib/: auth.test.ts  auth.ts  clothing.test.ts  clothing.ts  logger.test.ts  logger.ts  types.ts  weather-api.test.ts  weather-api.ts  weather.ts
week3/src/mcp/: server.test.ts  server.ts  tools.test.ts  tools.ts
week3/src/transports/: http-handler.test.ts  http-handler.ts
week4/: .coverage  CLAUDE.md  Makefile  assignment.md  assignment_zh.md  dev_tasks.py  pyproject.toml  writeup.md
week4/.claude/agents/: api-docs-sync.md  code-agent.md  schema-proposer.md  schema-refactor-agent.md  test-automation-agent.md
week4/.claude/skills/: docs-sync.md  refactor-module.md
week4/backend/app/: schemas.py
week4/backend/app/routers/: notes.py
week4/backend/app/services/: parser.py
week4/backend/tests/: test_action_items.py  test_extract.py  test_notes.py
week4/docs/: API.md  TASKS.md
week4/frontend/: app.js  index.html
week5/: Makefile  README.md  assignment.md  assignment_cn.md  dev_tasks.py  pyproject.toml  vercel.json  writeup.md
week5/api/: index.py
week5/backend/app/: main.py  models.py  schemas.py
week5/backend/app/routers/: action_items.py  notes.py  tags.py
week5/backend/app/services/: extract.py
week5/backend/tests/: test_action_items.py  test_api_errors.py  test_extract.py
week5/docs/: TASKS.md
week5/frontend/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
week5/frontend/ui/src/: App.css  App.test.tsx  App.tsx  api.ts
week5/frontend/ui/src/components/: ActionItems.tsx  NoteCard.tsx  NoteForm.tsx
week5/frontend/ui/src/hooks/: useNotes.ts
week6/: Semgrep_Code_Combined_Findings_2026_05_11.csv  Semgrep_Code_Combined_Findings_2026_05_12.csv  Semgrep_Supply_Chain_Findings_2026_05_12.csv  assignment.md  assignment_cn.md  pyproject.toml  requirements.txt  writeup.md
week7/: README.md  assignment.md  assignment_cn.md  prompt.md  pyproject.toml  writeup.md
week8/: Makefile  SPEC.md  SPEC.v1-nextjs.md  SPEC.v2-django.md  SPEC.v3-blazor.md  assignment.md  assignment_cn.md  package.json  pyproject.toml  writeup.md
(+148 files in other folders)
