[project]
name = "week4"
version = "0.1.0"
description = "Week 4 assignment - Autonomous Coding Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=9.0.2",
    "black>=24.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
run = "dev_tasks:run"
test = "dev_tasks:test"
format = "dev_tasks:format_code"
lint = "dev_tasks:lint"
seed = "dev_tasks:seed"

[project.optional-dependencies]
dev = [
    "httpx>=0.24.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
