[project]
name = "week5"
version = "0.1.0"
description = "Week 5 assignment - Agentic Development with Warp"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=9.0.2",
    "black>=24.1.0",
    "ruff>=0.4.0",
    "pytest-cov>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.24.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
